--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,26 +40,7 @@
             </div>
         </nav>
     </header>
-	<div class="container-fluid hero-section1">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-8">
-                <h1 class=" mt-5" style="color: #013232; font-size: 90px; line-height: 80px; letter-spacing: -1px; margin-left: 90px; vertical-align: middle; font-weight: 900;">
-                    Digital Group<br>Savings,Made<br>Easy
-                </h1>
-					<p style="font-size: 20px; color: #013232; line-height: 32px; letter-spacing: 0px; margin-left: 92px; font-weight: 500; margin-top: 25px; margin-bottom: 100px;">Save smarter, together! Automate your contributions, track<br> savings with full transparency, and enjoy secure financial<br> management for Ajo, Esusu, or thrift savings groups.</p>
-
-					<!-- Button -->
-					<div class="d-flex justify-content-start justify-content-md-start mt-4">
-					<a href="#" class="btn" style="background-color: #0AB70A; color: black; border-radius: 30px; padding: 12px 32px; font-weight: 600; font-size: 16px; margin-left: 92px;">
-						Join Wait List
-					</a>
-					</div>
-            </div>
-        </div>
-    </div>
-</div>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
