--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,3 +21,43 @@
 		</div>
 	</div>
 </div>
+<div class="container-fluid hero-section2" style="background-color: #013232; height: 767px; padding-top: 100px;">
+
+	<h6 style="color: #FFFFFF; font-size: 40px; letter-spacing: -1.36px; padding-top: 110px; padding-left: 180px; line-height: 46px; vertical-align: middle;">Secure & Smart Money<br/> Transfers with WeSave</h6>
+	<p style="color: #7A7B7A; font-size: 20px; padding-top: 15px; padding-left: 180px; padding-bottom: 15px;">Your hard-earned money deserves safe and <br />cost-effective transfers. Whether you're sending<br />50 euros or 50,000 dollars, WeSave ensures<br /> secure, transparent transactions without hidden<br />fees.</p>
+	<!-- Button -->
+	<div class="d-flex justify-content-start justify-content-md-start mt-4" style="padding-left: 180px;">
+		<a href="#" class="btn" style="background-color: #0AB70A; color: black; border-radius: 30px; padding: 12px 32px; font-weight: 600; font-size: 16px;">
+			Learn how to save
+		</a>
+	</div>
+	 
+</div>
+<div class="container-fluid hero-section3" style="background-color: #FFFFFF; height: 767px;">
+
+	<h6 style="color: #013232; font-size: 60px; font-weight: 900;vertical-align: middle; letter-spacing: -1.36px; padding-top: 110px; padding-left: 700px; line-height: 46px; vertical-align: middle;">About us</h6>
+	<p style="color: #7A7B7A; font-size: 20px; padding-top: 15px; padding-left: 700px; padding-bottom: 15px;">At WeSave, we believe in the power of community-<br />driven savings. Inspired by traditional savings<br /> practices like Ajo and Esusu, we have created a<br /> secure, transparent, and automated platform that<br /> allows individuals to collaborate, pool resources, and<br /> achieve financial stability together.</p>
+	<!-- Button -->
+	<div class="d-flex justify-content-start justify-content-md-start mt-4" style="padding-left: 700px;">
+		<a href="#" class="btn" style="background-color: #0AB70A; color: black; border-radius: 30px; padding: 12px 32px; font-weight: 600; font-size: 16px;">
+			Join us now
+		</a>
+	</div>
+	<div class="container" style="width: 800px; height: 400px; border-radius: 60px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); background-color: #FFFFFF; margin-top: 150px;">
+		<h6 style="color: #013232; font-size: 44px; font-weight: 700;vertical-align: middle; letter-spacing: -1.36px; padding-top: 80px; text-align: center; line-height: 46px; vertical-align: middle;">Our Mission</h6>
+		<p style="color: #7A7B7A; font-size: 17px; padding-top: 50px; padding-left: 40px; padding-bottom: 15px;">&nbsp;&nbsp;&nbsp;&nbsp; WeSave is committed to revolutionizing group savings by providing a secure,<br /> transparent, and automated platform for communities to collectively save and grow<br /> wealth. Inspired by traditional savings practices like Ajo and Esusu, we enable users<br />&nbsp;&nbsp; to build trusted savings circles, set financial goals, and benefit from structured<br />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; contributions that drive economic empowerment.</p>
+	</div>
+
+	<div class="container" style="width: 800px; height: 400px; border-radius: 60px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); background-color: #FFFFFF; margin-top: 100px;">
+		<h6 style="color: #013232; font-size: 44px; font-weight: 700;vertical-align: middle; letter-spacing: -1.36px; padding-top: 80px; text-align: center; line-height: 46px; vertical-align: middle;">Our Vision</h6>
+		<p style="color: #7A7B7A; font-size: 17px; padding-top: 50px; padding-left: 40px; padding-bottom: 15px;">
+			We envision a future where financial inclusion and collective wealth-building<br />&nbsp; &nbsp; &nbsp; empower communities. Through WeSave’s group saving technology,<br /> &nbsp; &nbsp; &nbsp; individuals can pool resources, achieve financial security, and create<br />&nbsp;  sustainable economic opportunities—all while maintaining the essence of<br />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  traditional community-driven savings.
+		</p>
+	</div>
+</div>
+
+@* <footer class="border-top footer text-muted">
+	<div class="container">
+		&copy; 2025 - WeSave - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+	</div>
+</footer> *@
