--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -54,7 +54,55 @@
 			We envision a future where financial inclusion and collective wealth-building<br />&nbsp; &nbsp; &nbsp; empower communities. Through WeSave’s group saving technology,<br /> &nbsp; &nbsp; &nbsp; individuals can pool resources, achieve financial security, and create<br />&nbsp;  sustainable economic opportunities—all while maintaining the essence of<br />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  traditional community-driven savings.
 		</p>
 	</div>
+	<div class="container-fluid hero-section4" style="background-color: #013232; height: 3000px;">
+		<h6 style="color: #FFFFFF; font-size: 44px; letter-spacing: -1.36px; padding-top: 110px; padding-left: 180px; line-height: 46px; vertical-align: middle;">Group Savings<br /> Mechanism</h6>
+		<p style="color: #7A7B7A; font-size: 20px; padding-top: 15px; padding-left: 180px;">
+			Create & Manage Groups: Users can form savings<br /> circles with family, friends, or community<br /> members.
+		</p>
+		<p style="color: #7A7B7A; font-size: 20px; padding-left: 180px;">Shared Goals: Tools to set common savings<br /> targets and track collective progress.</p>
+		<p style="color: #7A7B7A; font-size: 20px; padding-left: 180px;">Automated Contributions: Enable group members<br /> to schedule regular inputs automatically.</p>
+		
+			<hr style="border: none; border-top: 1px solid white;" />
+
+		<h6 style="color: #0AB70A; font-size: 44px; font-weight: 900;vertical-align: middle; letter-spacing: -1.36px; padding-top: 110px; padding-left: 700px; line-height: 46px; vertical-align: middle;">Intuitive Onboarding<br /> & Account Setup</h6>
+		<p style="color: #7A7B7A; font-size: 20px; padding-top: 15px; padding-left: 700px;">Easy Registration: A streamlined sign-up<br /> process that welcomes new users with minimal<br /> friction.</p>
+		<p style="color: #7A7B7A; font-size: 20px; padding-left: 700px;">User-Friendly Dashboard: A clean interface<br /> where users quickly understand their savings<br /> status, group participation, and available tools.</p>
+
+		<hr style="border: none; border-top: 1px solid white;" />
+
+		<h6 style="color: #FFFFFF; font-size: 44px; letter-spacing: -1.36px; padding-top: 110px; padding-left: 180px; line-height: 46px; vertical-align: middle;">Automated & <br /> Smart Savings</h6>
+		<p style="color: #7A7B7A; font-size: 20px; padding-top: 15px; padding-left: 180px;">
+			Savings Automation: Utilize algorithms to<br /> optimize savings deposits and manage recurring<br /> contributions.
+		</p>
+		<p style="color: #7A7B7A; font-size: 20px; padding-left: 180px;">Smart Savings Calculator: An interactive tool that<br /> compares potential savings against traditional<br /> banking fees, giving users transparency and a<br /> clear picture of how much they’re saving.</p>
+
+		<hr style="border: none; border-top: 1px solid white;" />
+
+		<h6 style="color: #0AB70A; font-size: 44px; font-weight: 900;vertical-align: middle; letter-spacing: -1.36px; padding-top: 110px; padding-left: 700px; line-height: 46px; vertical-align: middle;">Low-Cost, Transparent <br /> Transfers</h6>
+		<p style="color: #7A7B7A; font-size: 20px; padding-top: 15px; padding-left: 700px;">Zero Hidden Fees: A transparent fee structure<br />  where users see exactly what they’re paying—<br /> no surprises.</p>
+		<p style="color: #7A7B7A; font-size: 20px; padding-left: 700px;">Instant Global Transactions: Quick and secure <br />  transfers for both local and international <br />  transactions, ensuring funds move efficiently.</p>
+
+		<hr style="border: none; border-top: 1px solid white;" />
+
+		<h6 style="color: #FFFFFF; font-size: 44px; letter-spacing: -1.36px; padding-top: 110px; padding-left: 180px; line-height: 46px; vertical-align: middle;">Enhanced<br /> Security & Trust</h6>
+		<p style="color: #7A7B7A; font-size: 20px; padding-top: 15px; padding-left: 180px;">
+			Bank-Level Encryption: Protect every transaction<br /> using state-of-the-art encryption and fraud<br /> prevention technologies.
+		</p>
+		<p style="color: #7A7B7A; font-size: 20px; padding-left: 180px;">Compliance & Certifications: Regular audits and<br /> certifications to build and maintain trust across<br /> the platform</p>
+
+		<hr style="border: none; border-top: 1px solid white;" />
+
+		<h6 style="color: #0AB70A; font-size: 44px; font-weight: 900;vertical-align: middle; letter-spacing: -1.36px; padding-top: 110px; padding-left: 700px; line-height: 46px; vertical-align: middle;">Real-Time Alerts & <br /> Analytics</h6>
+		<p style="color: #7A7B7A; font-size: 20px; padding-top: 15px; padding-left: 700px;">Transaction Notifications: Immediate alerts that<br /> keep users updated about their deposits,<br /> withdrawals, and group activities.</p>
+		<p style="color: #7A7B7A; font-size: 20px; padding-left: 700px;">Performance Tracking: Detailed insights and<br /> analytics on savings growth, helping users to <br />adjust their strategies and reach their goals<br /> faster.</p>
+	</div>
+
+
+
 </div>
+
+
+
 
 @* <footer class="border-top footer text-muted">
 	<div class="container">
