--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -57,14 +57,40 @@
 
 <div class="container-fluid hero-section3" style="background-color: #FFFFFF; height: 767px;">
 
-	<h6 style="color: #013232; font-size: 60px; font-weight: 900;vertical-align: middle; letter-spacing: -1.36px; padding-top: 110px; padding-left: 700px; line-height: 46px; vertical-align: middle;">About us</h6>
-	<p style="color: #7A7B7A; font-size: 20px; padding-top: 15px; padding-left: 700px; padding-bottom: 15px;">At WeSave, we believe in the power of community-<br />driven savings. Inspired by traditional savings<br /> practices like Ajo and Esusu, we have created a<br /> secure, transparent, and automated platform that<br /> allows individuals to collaborate, pool resources, and<br /> achieve financial stability together.</p>
-	<!-- Button -->
-	<div class="d-flex justify-content-start justify-content-md-start mt-4" style="padding-left: 700px;">
-		<a href="#" class="btn" style="background-color: #0AB70A; color: black; border-radius: 30px; padding: 12px 32px; font-weight: 600; font-size: 16px;">
-			Join us now
-		</a>
-	</div>
+	<div class="container" style="padding-top: 110px;">
+    <div class="d-flex flex-wrap justify-content-center align-items-center gap-5">
+        <!-- Left side: Image -->
+        <div>
+            <img src="~/images/wesave comic image 1.png" 
+                 alt="WeSave Comic"
+                 style="max-width: 500px; height: auto;">
+        </div>
+
+        <!-- Right side: Text -->
+        <div style="max-width: 600px;">
+            <h6 style="color: #013232; font-size: 60px; font-weight: 900; letter-spacing: -1.36px; line-height: 66px;">
+                About us
+            </h6>
+            <p style="color: #7A7B7A; font-size: 20px; margin-top: 15px;">
+                At WeSave, we believe in the power of community-<br />
+                driven savings. Inspired by traditional savings<br />
+                practices like Ajo and Esusu, we have created a<br />
+                secure, transparent, and automated platform that<br />
+                allows individuals to collaborate, pool resources, and<br />
+                achieve financial stability together.
+            </p>
+            <!-- Button -->
+            <div class="mt-4">
+                <a href="#" class="btn" 
+                   style="background-color: #0AB70A; color: black; border-radius: 30px; 
+                          padding: 12px 32px; font-weight: 600; font-size: 16px;">
+                    Join us now
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
 	<div class="container" style="width: 800px; height: 400px; border-radius: 60px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); background-color: #FFFFFF; margin-top: 150px;">
 		<h6 style="color: #013232; font-size: 44px; font-weight: 700;vertical-align: middle; letter-spacing: -1.36px; padding-top: 80px; text-align: center; line-height: 46px; vertical-align: middle;">Our Mission</h6>
 		<p style="color: #7A7B7A; font-size: 17px; padding-top: 50px; padding-left: 40px; padding-bottom: 15px;">&nbsp;&nbsp;&nbsp;&nbsp; WeSave is committed to revolutionizing group savings by providing a secure,<br /> transparent, and automated platform for communities to collectively save and grow<br /> wealth. Inspired by traditional savings practices like Ajo and Esusu, we enable users<br />&nbsp;&nbsp; to build trusted savings circles, set financial goals, and benefit from structured<br />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; contributions that drive economic empowerment.</p>
